Fixed animation on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -439,22 +439,31 @@ div#navmenu {
 /* media queries */
 
 @media (max-width:640px) and (orientation: portrait){
+    .content {
+        left: 10px;
+
+    }
     .inner{
         width: 100%;
     }
     .title-text, .header-text {
         font-size: 24px;
-        margin: 20px 30px 0px 20px;
+        margin: 20px 20px 0px 20px;
     }
     .subtitle-text, .big-button a {
         font-size: 14px;
-        margin: 20px 30px 25px 20px;
+        margin: 20px 20px 25px 20px;
     }
 
     .body-text, .paragraph-text {
         font-size: 14px;
-        margin: 20px 30px 25px 20px;
+        margin: 20px 20px 25px 20px;
         text-align: justify;
+    }
+
+    .caption-text {
+        font-size: 24px;
+        margin: 20px 20px 0px 20px;
     }
 
     .button a{
@@ -474,17 +483,32 @@ div#navmenu {
     }
 
     img {
-        padding: 20px;
+        padding: 5px;
     }
 
     img.diagram {
-        max-width: 100%;
-        margin: 0px auto;
+        max-width: 80% ;
+        margin: 20px 20px 25px 20px;
     }
     .tag-container {
         margin: 50px 2px 25px 10px;
         float: left;
         opacity: 0.5;
 
+    }
+
+    @keyframes moving {
+        from {transform: translate(-200px, 0px);}
+        to {transform: translate(10px, -70px);}
+
+        0%   { opacity: 1; }
+        100% { opacity: 0.1;}
+    }
+
+    @keyframes removing {
+        from {transform: translate(200px, 0px);}
+        to {transform: translate(-10px, 30px);}
+        0%   { opacity: 1; }
+        100% { opacity: 0.1;}
     }
 }
